Fix #8613 - reset links alignments (#8614)

--- a/src/sass/pages/loginForm.scss
+++ b/src/sass/pages/loginForm.scss
@@ -37,7 +37,7 @@
 }
 
 .loginForm-actions-forgot-reset {
-    align-items: baseline;
+    align-items: center;
     & > * {
         white-space: normal;
     }
